update m-query mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
-    <!-- <a href='https://pngtree.com/so/줄자'>줄자 png from pngtree.com</a> -->
+  <!-- <a href='https://pngtree.com/so/줄자'>줄자 png from pngtree.com</a> -->
   <title>y0u&g.e</title>
 </head>
 
@@ -19,17 +19,18 @@
       <div class="stick"></div>
       <div class="stick"></div>
       <div class="stick"></div>
-      <div class="stick"></div>
-      <div class="stick"></div>
-      <div class="stick"></div>
       <h1>Loading.....</h1>
     </div>
   </div>
-  
+
   <div class="page-wrap">
     <header>
       <h1 class="pw-logo">lee ga gyoung.</h1>
       <nav>
+        <div id="hNavBtn">
+          <span class="line"></span>
+          <span class="line"></span>
+        </div>
         <ul class="h-nav">
           <li><button type="button" class="on">contact</button></li>
           <li><button type="button">technique</button></li>
@@ -37,10 +38,6 @@
           <li><button type="button">sub project</button></li>
         </ul>
       </nav>
-      <div id="hNavBtn">
-        <span class="line"></span>
-        <span class="line"></span>
-      </div>
     </header>
     <main>
       <div class="main-inner">
@@ -61,34 +58,46 @@
           <ul class="sec">
             <li>
               <strong><i class="t-logo"></i>JavaScript</strong>
-              <b>ES6</b>
-              <span>
-                ES6, ES2020 문법을 이해하고, 이를 기반으로 코드를 구현 할줄 압니다.
-              </span>
-              <b>Vanilla Javascript</b>
-              <span>플러그인, 프레임워크 등을 사용하지 않고 순수한 자바스크립트로 DOM을 제어하고 코드를 구현 할수 있습니다. </span>
+              <div class="t-content">
+                <b>ES6</b>
+                <span>
+                  ES6, ES2020 문법을 이해하고, 이를 기반으로 코드를 구현 할줄 압니다.
+                </span>
+                <b>Vanilla Javascript</b>
+                <span>플러그인, 프레임워크 등을 사용하지 않고 순수한 자바스크립트로 DOM을 제어하고 코드를 구현 할수 있습니다. </span>
+              </div>
             </li>
             <li>
               <strong><i class="t-logo"></i>HTML</strong>
-              <b>HTML5</b>
-              <span>웹표준, 웹접근성을 준수하여 마크업을 하고 검색엔진 최적화(SEO)를 고려하여 가독성과 효율성에 맞게 태그를 사용합니다. </span>
+              <div class="t-content">
+                <b>HTML5</b>
+                <span>웹표준, 웹접근성을 준수하여 마크업을 하고 검색엔진 최적화(SEO)를 고려하여 가독성과 효율성에 맞게 태그를 사용합니다. </span>
+              </div>
             </li>
             <li>
               <strong><i class="t-logo"></i>CSS</strong>
-              <b>CSS3</b>
-              <span>
-                애니메이션과 미디어쿼리를 사용해 반응형 웹사이트를 구현할수 있으며, 유지보수성에 중점을 둔 코드를 구현합니다.
-              </span>
+              <div class="t-content">
+                <b>CSS3</b>
+                <span>
+                  애니메이션과 미디어쿼리를 사용해 반응형 웹사이트를 구현할수 있으며, 유지보수성에 중점을 둔 코드를 구현합니다.
+                </span>
+              </div>
             </li>
             <li>
               <strong><i class="t-logo"></i>Vue.js</strong>
-              <b>Vue.js</b>
-              <span>JavaScript 기반으로 작동하는 프레임워크로 vue.js의 생성주기를 이용해 데이터를 동적으로 사용하고, 라우터를 활용해 SPA 웹페이지를 구현할수 있습니다.</span>
+              <div class="t-content">
+                <b>Vue.js</b>
+                <span>JavaScript 기반으로 작동하는 프레임워크로 vue.js의 생성주기를 이용해 데이터를 동적으로 사용하고, 라우터를 활용해 SPA 웹페이지를 구현할수 있습니다.</span>
+              </div>
+
             </li>
             <li>
               <strong><i class="t-logo"></i>git</strong>
-              <b>Git/Github</b>
-              <span>git을 이용해 버전관리와 협업을 할수 있습니다.</span>
+              <div class="t-content">
+                <b>Git/Github</b>
+                <span>git을 이용해 버전관리와 협업을 할수 있습니다.</span>
+              </div>
+
             </li>
           </ul>
         </section>
@@ -96,12 +105,12 @@
           <h3>project</h3>
           <ul class="sec list">
             <li>
-              <strong>머니부</strong>       
+              <strong>머니부</strong>
               <div class="sec-container">
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
-                  <a  class="code" href="#" target="_blank"># vue</a>
+                  <a class="code" href="#" target="_blank"># vue</a>
                   <a class="sec-btn" href="https://elated-albattani-035181.netlify.app" target="_blank">click me</a>
                 </div>
               </div>
@@ -111,7 +120,7 @@
             <span class="line"></span>
             <span class="line"></span>
           </div>
-          <i  class="scroll" href="#"><span></span><span></span></i>
+          <i class="scroll" href="#"><span></span><span></span></i>
         </section>
         <section class="s-project">
           <div class="s-tab">
@@ -147,7 +156,8 @@
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/index.html"
                           target="_blank"># html</a>
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/app.js" target="_blank">#
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/app.js"
+                          target="_blank">#
                           js</a>
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/css/style.css"
                           target="_blank"># css</a>
@@ -212,7 +222,8 @@
                           target="_blank"># html</a>
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/K-Life%20insurance/js/index.js"
                           target="_blank"># js</a>
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/K-Life%20insurance/css" target="_blank">#
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/K-Life%20insurance/css"
+                          target="_blank">#
                           css</a>
                       </div>
                       <a class="sec-btn" href="./K-Life insurance/" target="_blank">click me</a>
@@ -226,9 +237,11 @@
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
                       <div class="code-box">
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/index.html" target="_blank">#
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/index.html"
+                          target="_blank">#
                           html</a>
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/js/main.js" target="_blank">#
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/js/main.js"
+                          target="_blank">#
                           js</a>
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/css/common.css"
                           target="_blank"># css</a>
@@ -244,11 +257,14 @@
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
                       <div class="code-box">
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/Microsoft/index.html" target="_blank">#
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/Microsoft/index.html"
+                          target="_blank">#
                           html</a>
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/Microsoft/js/index.js" target="_blank">#
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/Microsoft/js/index.js"
+                          target="_blank">#
                           js</a>
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/Microsoft/css" target="_blank"># css</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/Microsoft/css"
+                          target="_blank"># css</a>
                       </div>
                       <a class="sec-btn" href="./Microsoft/index.html" type="" target="_blank">click me</a>
                     </div>
@@ -261,12 +277,14 @@
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
                       <div class="code-box">
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/index.html" target="_blank">#
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/index.html"
+                          target="_blank">#
                           html</a>
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/js/kakao_main_js.js"
                           target="_blank">#
                           js</a>
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/css/common.css" target="_blank">#
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/css/common.css"
+                          target="_blank">#
                           css</a>
                       </div>
                       <a class="sec-btn" href="./kakao/index.html" target="_blank">click me</a>
@@ -278,9 +296,9 @@
                 <span class="line"></span>
                 <span class="line"></span>
               </div>
-              <i  class="scroll"><span></span><span></span></i>
+              <i class="scroll"><span></span><span></span></i>
             </div>
-            
+
             <!-- vue -->
             <div class="vue-js">
               <h3>vue.js</h3>
@@ -291,7 +309,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a  class="code" href="#" target="_blank"># vue</a>
+                      <a class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
@@ -302,7 +320,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a  class="code" href="#" target="_blank"># vue</a>
+                      <a class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
@@ -313,7 +331,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a  class="code" href="#" target="_blank"># vue</a>
+                      <a class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
@@ -324,7 +342,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a  class="code" href="#" target="_blank"># vue</a>
+                      <a class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
@@ -335,7 +353,7 @@
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
-                      <a  class="code" href="#" target="_blank"># vue</a>
+                      <a class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
                   </div>
@@ -346,8 +364,8 @@
                 <span class="line"></span>
               </div>
             </div>
-            <i  class="scroll"><span></span><span></span></i>
-          </div>   
+            <i class="scroll"><span></span><span></span></i>
+          </div>
         </section>
       </div>
     </main>
