--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
           <i class="scroll" href="#"><span></span><span></span></i>
         </section>
-        <section class="s-project">
+        <section class="s-project" id="sub-p">
           <div class="s-tab">
             <button class="show" type="button">vanilla</button>
             <button type="button">vue</button>
