--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <div class="stick"></div>
       <div class="stick"></div>
       <div class="stick"></div>
-      <div class="stick"></div>
       <h1>Loading.....</h1>
     </div>
   </div>
@@ -111,7 +110,7 @@
                 <div class="content">
                   <p class="sec-explain">해당 내용 설명</p>
                   <a class="code" href="#" target="_blank"># vue</a>
-                  <a class="sec-btn" href="https://elated-albattani-035181.netlify.app" target="_blank">click me</a>
+                  <a class="sec-btn" href="https://goofy-joliot-865e26.netlify.app/registration" target="_blank">click me</a>
                 </div>
               </div>
             </li>
@@ -197,15 +196,15 @@
                   </div>
                 </li>
                 <li>
-                  <strong>LEE GA YOUNG PAGE</strong>
+                  <strong>lee ga young page</strong>
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
                       <p class="sec-explain">해당 내용 설명</p>
                       <div class="code-box">
-                        <a href="#" target="_blank"># html</a>
-                        <a href="#" target="_blank"># js</a>
-                        <a href="#" target="_blank"># css</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/index.html" target="_blank"># html</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/js" target="_blank"># js</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/assets/css/style.css" target="_blank"># css</a>
                       </div>
                       <a class="sec-btn" href="https://gay0ung.github.io/" target="_blank">click me</a>
                     </div>
