update 머니부 내용

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
       <div class="main-inner">
         <section class="contact on">
           <h3>contact</h3>
-          <!-- <h3>이가영</h3> -->
           <div class="sec">
             <div class="contact-img"></div>
             <address class="contact">
@@ -108,8 +107,15 @@
               <div class="sec-container">
                 <div class="sec-img"></div>
                 <div class="content">
-                  <p class="sec-explain">해당 내용 설명</p>
-                  <a class="code" href="#" target="_blank"># vue</a>
+                  <p class="sec-explain">파이어 베이스에 사용자가 지정한 데이터를 저장하며, 각 유저마다 고유의 id를 가지고 있어 로그인을 할경우에만 웹을 이용할수 있다.
+                  해당 페이지에서 메인 페이지와 통계페이지를 담당했다.
+                  메인 페이지는 유저의 자산 목록과 각 은행별 자산을 지출/수입의 변동사항에 따라 유동적으로 변경 되도록 구현하였고, 
+                  통계페이지에서는 데일리 페이지에서 등록한 지출 데이터를 각 카테고리별로 구분 하여 백분율로 통계를 냈으며,각 월별 총 지출을 또한 한눈에 보기쉽게 통계로 구현 해냈다.(통계페이지는 chart.js 플러그인을 사용하였다)</p>
+                  <div class="code-box">
+                    <a  href="https://github.com/gay0ung/moneyboo/tree/develop/src/components/statistics" target="_blank"># Statistics.vue</a>
+                    <a  href="https://github.com/gay0ung/moneyboo/blob/develop/src/components/AssetListForm.vue" target="_blank"># Main.vue</a>
+                  </div>
+                 
                   <a class="sec-btn" href="https://goofy-joliot-865e26.netlify.app/registration" target="_blank">click me</a>
                 </div>
               </div>
@@ -151,7 +157,7 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <p class="sec-explain">JS(코드는 바닐라자바스크립트로 작성하였다)와 엘리먼트를 통해 간단한 그림판을 구현하였다. casnvas API를 이용하였으며 ,펜의 굵기,색상에 따라 그림을 그릴수 있고, fill버튼으로 캔버스의 색상을 바꿀수 있으며, save버튼을 통해 내가 그린 그림을 .jpg 형식으로 저장할수 있다.</p>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/index.html"
                           target="_blank"># html</a>
