--- a/jenniferSoft/index.html
+++ b/jenniferSoft/index.html
@@ -69,12 +69,12 @@
 					<div class="visual_photo">
 						<ul class="visual_photo_inner">
 							<li>
-								<img src="images/main_1_jennifer.jpg">
-								<div class="imgcover"></div>
+								<div class="m-bg" style="background-image: url(./images/main_1_jennifer.jpg)" ></div>
+								<!-- <img class="m-bg" src="./images/main_1_jennifer.jpg"alt=""> -->
 							</li>
-							<li >
-								<img src="images/main_cloud_2.jpg">
-								<div class="imgcover"></div>
+							<li>
+								<div class="m-bg" style="background-image: url(./images/main_cloud_2.jpg)"></div>
+								<!-- <img class="m-bg" src="./images/main_cloud_2.jpg" alt=""> -->
 							</li>
 						</ul>
 						<div class="visual_bgc"></div>
