--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <div class="sec-img"></div>
                 <div class="content">
                   <p class="sec-explain">파이어 베이스에 사용자가 지정한 데이터를 저장하며, 각 유저마다 고유의 id를 가지고 있어 로그인을 할경우에만 웹을 이용할수 있다.
-                  해당 페이지에서 메인 페이지와 통계페이지를 담당했다.
+                  해당 페이지에서 메인 페이지와 통계페이지를 담당했습니다.
                   메인 페이지는 유저의 자산 목록과 각 은행별 자산을 지출/수입의 변동사항에 따라 유동적으로 변경 되도록 구현하였고, 
-                  통계페이지에서는 데일리 페이지에서 등록한 지출 데이터를 각 카테고리별로 구분 하여 백분율로 통계를 냈으며,각 월별 총 지출을 또한 한눈에 보기쉽게 통계로 구현 해냈다.(통계페이지는 chart.js 플러그인을 사용하였다)</p>
+                  통계페이지에서는 데일리 페이지에서 등록한 지출 데이터를 각 카테고리별로 구분 하여 백분율로 통계를 냈으며,각 월별 총 지출을 또한 한눈에 보기쉽게 통계로 구현 했습니다.(통계페이지는 chart.js 플러그인을 사용하였다)</p>
                   <div class="code-box">
                     <a  href="https://github.com/gay0ung/moneyboo/tree/develop/src/components/statistics" target="_blank"># Statistics.vue</a>
                     <a  href="https://github.com/gay0ung/moneyboo/blob/develop/src/components/AssetListForm.vue" target="_blank"># Main.vue</a>
@@ -157,7 +157,7 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">JS(코드는 바닐라자바스크립트로 작성하였다)와 엘리먼트를 통해 간단한 그림판을 구현하였다. casnvas API를 이용하였으며 ,펜의 굵기,색상에 따라 그림을 그릴수 있고, fill버튼으로 캔버스의 색상을 바꿀수 있으며, save버튼을 통해 내가 그린 그림을 .jpg 형식으로 저장할수 있다.</p>
+                      <p class="sec-explain">JS(코드는 바닐라자바스크립트로 작성하였다)와 엘리먼트를 통해 간단한 그림판을 구현 하였습니다. casnvas API를 이용하였으며 ,펜의 굵기,색상에 따라 그림을 그릴수 있고, fill버튼으로 캔버스의 색상을 바꿀수 있으며, save버튼을 통해 내가 그린 그림을 .jpg 형식으로 저장할수 있습니다.</p>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/index.html"
                           target="_blank"># html</a>
@@ -221,7 +221,7 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <p class="sec-explain">웹접근성을 준수하여 마크업한 페이지입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile에 맞게 반응형으로 제작하였으며,  vanilla JS 를 이용해 동적인 기능들을 구현했습니다.</p>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/K-Life%20insurance/index.html"
                           target="_blank"># html</a>
@@ -235,32 +235,13 @@
                     </div>
                   </div>
                 </li>
-                <li>
-                  <strong>제니퍼</strong>
-                  <div class="sec-container">
-                    <div class="sec-img"></div>
-                    <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
-                      <div class="code-box">
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/index.html"
-                          target="_blank">#
-                          html</a>
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/js/main.js"
-                          target="_blank">#
-                          js</a>
-                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/css/common.css"
-                          target="_blank"># css</a>
-                      </div>
-                      <a class="sec-btn" href="./jenniferSoft/index.html" target="_blank">click me</a>
-                    </div>
-                  </div>
-                </li>
+               
                 <li>
                   <strong>마이크로소프트</strong>
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <p class="sec-explain">웹접근성을 준수하여 마크업한 사이트입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile의 다양한 접속환경에서 불편함 없이 동일한 정보를 볼 수 있는 반응형으로 제작했습니다. 바닐라 JavaScript를 이용해 동적인 기능들을 구현했습니다.</p>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/Microsoft/index.html"
                           target="_blank">#
@@ -276,11 +257,30 @@
                   </div>
                 </li>
                 <li>
+                  <strong>제니퍼</strong>
+                  <div class="sec-container">
+                    <div class="sec-img"></div>
+                    <div class="content">
+                      <p class="sec-explain">웹접근성을 준수하여 마크업한 페이지입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile에 맞게 반응형으로 제작하였으며, vanilla JS 를 이용해
+                        동적인 기능들을 구현했습니다.</p>
+                      <div class="code-box">
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/index.html" target="_blank">#
+                          html</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/js/main.js" target="_blank">#
+                          js</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/jenniferSoft/css/common.css" target="_blank">#
+                          css</a>
+                      </div>
+                      <a class="sec-btn" href="./jenniferSoft/index.html" target="_blank">click me</a>
+                    </div>
+                  </div>
+                </li>
+                <li>
                   <strong>카카오페이지</strong>
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <p class="sec-explain">웹접근성을 준수하여 마크업한 페이지입니다. 미디어쿼리를 이용해 PC, Tablet, Mobile에 맞게 반응형으로 제작하였으며,  vanilla JS 를 이용해 동적인 기능들을 구현했습니다.</p>
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/kakao/index.html"
                           target="_blank">#
