--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -711,14 +711,14 @@
                                             <div class="col">
                                                 <div class="col-slide-container">
                                                     <div class="slide-img-wrap">
-                                                        <div class="slide on">
-                                                            <a href=""></a>
+                                                        <div class="slide show">
+                                                            <span></span>
                                                         </div>
                                                         <div class="slide">
-                                                            <a href=""></a>
+                                                            <span></span>
                                                         </div>
                                                         <div class="slide">
-                                                            <a href=""></a>
+                                                            <span></span>
                                                         </div>
                                                     </div>
                                                     <div class="slide-page-set">
@@ -727,7 +727,6 @@
                                                         </div>
                                                         <div class="slide-page-num">
                                                             <span class="on"></span>
-                                                            <span></span>
                                                             <span></span>
                                                             <span></span>
                                                         </div>
@@ -767,21 +766,27 @@
                                         </div>
                                         <div class="col">
                                             <ul class="more-info-wrap clear">
-                                                <li><a href="">
+                                                <li>
+                                                    <a href="">
                                                         <i></i>
                                                         <p>협회소개</p>
                                                         <span class="btn-go">바로가기 →</span>
-                                                    </a></li>
-                                                <li><a href="">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="">
                                                         <i></i>
                                                         <p>간행물</p>
                                                         <span class="btn-go">바로가기 →</span>
-                                                    </a></li>
-                                                <li><a href="">
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="">
                                                         <i></i>
                                                         <p class="r2">회원사 및</br>유관기관 안내</p>
                                                         <span class="btn-go">바로가기 →</span>
-                                                    </a></li>
+                                                    </a>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
