--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <strong><i class="t-logo"></i>Vue.js</strong>
               <div class="t-content">
                 <b>Vue.js</b>
-                <span>JavaScript 기반으로 작동하는 프레임워크로 vue.js의 생성주기를 이용해 데이터를 동적으로 사용하고, 라우터를 활용해 SPA 웹페이지를 구현할수 있습니다.</span>
+                <span>vue.js의 생성주기를 이용해 데이터를 동적으로 사용하고, 라우터를 활용해 SPA 웹페이지를 구현할수 있습니다.</span>
               </div>
 
             </li>
@@ -96,6 +96,14 @@
                 <span>git을 이용해 버전관리와 협업을 할수 있습니다.</span>
               </div>
 
+            </li>
+            <li>
+              <strong><i class="t-logo"></i>React</strong>
+              <div class="t-content">
+                <b>React</b>
+                <span>컴포넌트를 세분화해 복잡한 UI를 구현할수 있습니다. 또한 hook을 사용하여 데이터를 최적화 하는데 중점을 둔 코드를 구현합니다.</span>
+              </div>
+            
             </li>
           </ul>
         </section>
@@ -176,13 +184,13 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <p class="sec-explain">순수 Javascript 로 구현한 계산기 입니다.</p>
                       <div class="code-box">
-                        <a href="#" target="_blank"># html</a>
-                        <a href="#" target="_blank"># js</a>
-                        <a href="#" target="_blank"># css</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/caculator/index.html" target="_blank"># html</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/caculator/src/index.js" target="_blank"># js</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/caculator/src/styles.css" target="_blank"># css</a>
                       </div>
-                      <a class="sec-btn" href="#" target="_blank">click me</a>
+                      <a class="sec-btn" href="./vanilla/caculator/index.html" target="_blank">click me</a>
                     </div>
                   </div>
                 </li>
@@ -191,13 +199,13 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <p class="sec-explain">숫자의 범위를 선택해서 0 부터 사용자가 지정해 놓은 곳까지 랜덤으로 정해진 숫자를 맞출수 있습니다. 해당 게임은 순수 자바스크립트로 구현하였습니다.</p>
                       <div class="code-box">
-                        <a href="#" target="_blank"># html</a>
-                        <a href="#" target="_blank"># js</a>
-                        <a href="#" target="_blank"># css</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/random%20Number/index.html" target="_blank"># html</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/random%20Number/src/index.js" target="_blank"># js</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/random%20Number/src/styles.css" target="_blank"># css</a>
                       </div>
-                      <a class="sec-btn" href="#" target="_blank">click me</a>
+                      <a class="sec-btn" href="./vanilla/random Number/index.html" target="_blank">click me</a>
                     </div>
                   </div>
                 </li>
@@ -313,9 +321,9 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
-                      <a class="code" href="#" target="_blank"># vue</a>
-                      <a class="sec-btn" href="#" target="_blank">click me</a>
+                      <p class="sec-explain">현재 위치의 날씨를 알수 있으며 원하는 나라또는 지역을 검색할수 있습니다. 날씨는 최대 일주일 후까지의 나타냈으며 현재 온도, 최대온도, 체감온도 정보를 알수 있습니다.</p>
+                      <a class="code" href="https://github.com/gay0ung/Vue/tree/master/weather/src" target="_blank"># vue</a>
+                      <a class="sec-btn" href="https://eloquent-lumiere-dd3402.netlify.app/#/" target="_blank">click me</a>
                     </div>
                   </div>
                 </li>
@@ -324,7 +332,7 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <p class="sec-explain"></p>
                       <a class="code" href="#" target="_blank"># vue</a>
                       <a class="sec-btn" href="#" target="_blank">click me</a>
                     </div>
@@ -335,9 +343,9 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <p class="sec-explain">Hacker news API를 연동하여 VUE.JS로 제작하였습니다.</p>
                       <a class="code" href="#" target="_blank"># vue</a>
-                      <a class="sec-btn" href="#" target="_blank">click me</a>
+                      <a class="sec-btn" href="https://xenodochial-neumann-091b51.netlify.app/news" target="_blank">click me</a>
                     </div>
                   </div>
                 </li>
