--- a/index.html
+++ b/index.html
@@ -345,18 +345,7 @@
                     <div class="content">
                       <p class="sec-explain">Hacker news API를 연동하여 VUE.JS로 제작하였습니다.</p>
                       <a class="code" href="#" target="_blank"># vue</a>
-                      <a class="sec-btn" href="https://xenodochial-neumann-091b51.netlify.app/news" target="_blank">click me</a>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <strong>game</strong>
-                  <div class="sec-container">
-                    <div class="sec-img"></div>
-                    <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
-                      <a class="code" href="#" target="_blank"># vue</a>
-                      <a class="sec-btn" href="#" target="_blank">click me</a>
+                      <a class="sec-btn" href="https://xenodochial-neumann-091b51.netlify.app" target="_blank">click me</a>
                     </div>
                   </div>
                 </li>
@@ -365,9 +354,9 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">해당 내용 설명</p>
-                      <a class="code" href="#" target="_blank"># vue</a>
-                      <a class="sec-btn" href="#" target="_blank">click me</a>
+                      <p class="sec-explain">vue로 제작한 todo-list입니다. 기본적으로 삭제(&전체작제), 추가 기능이 구현되었으며 추가 했던 리스트들을 localstorage에 저장하여 , 재접속시 유저가 추가 했던 내용을 다시 불러올수 있게 하였습니다.</p>
+                      <a class="code" href="https://github.com/gay0ung/Vue/tree/master/todo-list/src" target="_blank"># vue</a>
+                      <a class="sec-btn" href="https://confident-murdock-6bedfd.netlify.app" target="_blank">click me</a>
                     </div>
                   </div>
                 </li>
