--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             </address>
           </div>
         </section>
+        <!-- technique -->
         <section class="technique">
           <h3>technique</h3>
           <ul class="sec">
@@ -115,10 +116,20 @@
               <div class="sec-container">
                 <div class="sec-img"></div>
                 <div class="content">
-                  <p class="sec-explain">파이어 베이스에 사용자가 지정한 데이터를 저장하며, 각 유저마다 고유의 id를 가지고 있어 로그인을 할경우에만 웹을 이용할수 있다.
-                  해당 페이지에서 메인 페이지와 통계페이지를 담당했습니다.
-                  메인 페이지는 유저의 자산 목록과 각 은행별 자산을 지출/수입의 변동사항에 따라 유동적으로 변경 되도록 구현하였고, 
-                  통계페이지에서는 데일리 페이지에서 등록한 지출 데이터를 각 카테고리별로 구분 하여 백분율로 통계를 냈으며,각 월별 총 지출을 또한 한눈에 보기쉽게 통계로 구현 했습니다.(통계페이지는 chart.js 플러그인을 사용하였다)</p>
+                  <ul class="sec-explain">
+                    <li>
+                      <b>구현한 페이지 : 메인, 통계</b>
+                      <ul>
+                        <li>- 메인페이지 : user의 자산 목록과 각 은행별 자산을 지축/ 수입의 변동사항에 따라 유동적으로 변경되도록 하였다.</li>
+                        <li>- 통계페이지 : 데일리 페이지에서 등록한 지출 데이터를 각 카테고리별로 구분 하여 백분율로 통계를 나타내었으며, 월별 총 지출 또한 한눈에 보기쉽게 통계로 구현했습니다.(통계페이지는 chart.js 플러그인을 사용하였습니다)</li>
+                      </ul>
+                    </li>
+                    <li>
+                      <b>사용기술</b>
+                      <p>vue.js, axios, firebase, git, html, css, chart.js</p>
+                    </li>
+                  </ul>
+                  
                   <div class="code-box">
                     <a  href="https://github.com/gay0ung/moneyboo/tree/develop/src/components/statistics" target="_blank"># Statistics.vue</a>
                     <a  href="https://github.com/gay0ung/moneyboo/blob/develop/src/components/AssetListForm.vue" target="_blank"># Main.vue</a>
@@ -150,13 +161,27 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content ">
-                      <p class="sec-explain">해당 내용 설명</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <ul>
+                            <li>- 현재 시간을 알수 있습니다.</li>
+                            <li>- 새로고침시 랜덤으로 배경사진이 변경됩니다.</li>
+                            <li>- 리스트는 추가/ 삭제/ 완료 기능이 있습니다.</li>
+                            <li>- localstorage를 이용해 리스트 수정 내용을 저장하였습니다.</li>
+                          </ul>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>javascript, html, css</p>
+                        </li>     
+                      </ul>
                       <div class="code-box">
-                        <a href="#" target="_blank"># html</a>
-                        <a href="#" target="_blank"># js</a>
-                        <a href="#" target="_blank"># css</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/todoList/index.html" target="_blank"># html</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/tree/master/vanilla/google-page/js" target="_blank"># js</a>
+                        <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/google-page/index.css" target="_blank"># css</a>
                       </div>
-                      <a class="sec-btn" href="#" target="_blank">click me</a>
+                      <a class="sec-btn" href="./vanilla/google-page/index.html" target="_blank">click me</a>
                     </div>
                   </div>
                 </li>
@@ -165,7 +190,22 @@
                   <div class="sec-container">
                     <div class="sec-img"></div>
                     <div class="content">
-                      <p class="sec-explain">JS(코드는 바닐라자바스크립트로 작성하였다)와 엘리먼트를 통해 간단한 그림판을 구현 하였습니다. casnvas API를 이용하였으며 ,펜의 굵기,색상에 따라 그림을 그릴수 있고, fill버튼으로 캔버스의 색상을 바꿀수 있으며, save버튼을 통해 내가 그린 그림을 .jpg 형식으로 저장할수 있습니다.</p>
+                      <ul class="sec-explain">
+                        <li>
+                          <b>기능</b>
+                          <ul>
+                            <li>- canvasAPI 를 이용해 그림판을 구현하였습니다.</li>
+                            <li>- 펜의 굵기, 색상에 따라 그림을 그릴수 있습니다.</li>
+                            <li>- fill버튼으로 캔버스의 색상을 바꿀수 있다.</li>
+                            <li>- save 버튼으로 그린 그림을 .jpg 형식으로 저장할수 있습니다.</li>
+                          </ul>
+                        </li>
+                        <li>
+                          <b>사용한 기술</b>
+                          <p>javascript, html, css</p>
+                        </li>
+                      </ul>
+                      <!-- <p class="sec-explain">JS(코드는 바닐라자바스크립트로 작성하였다)와 엘리먼트를 통해 간단한 그림판을 구현 하였습니다. casnvas API를 이용하였으며 ,펜의 굵기,색상에 따라 그림을 그릴수 있고, fill버튼으로 캔버스의 색상을 바꿀수 있으며, save버튼을 통해 내가 그린 그림을 .jpg 형식으로 저장할수 있습니다.</p> -->
                       <div class="code-box">
                         <a href="https://github.com/gay0ung/gay0ung.github.io/blob/master/vanilla/paint-JS/index.html"
                           target="_blank"># html</a>
